# tbank_kassa

./: .gitignore  main.py  pyproject.toml
.github/workflows/: publish.yml
_/tbank_kassa/: api.py  environment.py
_/tbank_kassa/_/types/: base.py  response.py
tbank_kassa/: __init__.py  api.py  client.py  enums.py  exceptions.py  validators.py
tbank_kassa/_/models/request/: init.py  request.py
tbank_kassa/_/types/: payment.py
tbank_kassa/models/: base.py
tbank_kassa/models/dicts/: init.py
tbank_kassa/models/request/: init.py  item_ffd_105.py  item_ffd_12.py  receipt_ffd_105.py  receipt_ffd_12.py
tbank_kassa/schema/: base.py  fields.py  init.py
